' Generated by UML Generator
' Encoded: RP51Ry8m38Nl-HK-jXfKd7kOG4987BXiq-ucjS0YTL7Ybcc8_muf54MKezzxd-quyw3ejQsT2GUM8tgimJeCOQ7gUTighMqZt_nFC3DxhWWiU-l8c3u5IyyTosxLYbLk9C3P07oWjUJ8erBMbV1BUxuXUGbTmvMv3Eog9VU3ShWpdcBz9l_Ecu3GAMebiEYeyoFLDvxM-FTCnjfJZIpzqeawZNCUN9OYUJHsf9kxbkK34iMlj5TYXLThF3HPUdJ4elWStc2ULqh5EKbr-xGh
' URL: http://www.plantuml.com/plantuml/uml/RP51Ry8m38Nl-HK-jXfKd7kOG4987BXiq-ucjS0YTL7Ybcc8_muf54MKezzxd-quyw3ejQsT2GUM8tgimJeCOQ7gUTighMqZt_nFC3DxhWWiU-l8c3u5IyyTosxLYbLk9C3P07oWjUJ8erBMbV1BUxuXUGbTmvMv3Eog9VU3ShWpdcBz9l_Ecu3GAMebiEYeyoFLDvxM-FTCnjfJZIpzqeawZNCUN9OYUJHsf9kxbkK34iMlj5TYXLThF3HPUdJ4elWStc2ULqh5EKbr-xGh
' Generated on: 2026-03-19T09:34:57.796364200

@startuml
skinparam classAttributeIconSize 0
hide circle

class DrivingFunctions {
  +accelerate(v: Vehicle): void
}

class FuelTank {
  +reFuel(v: Vehicle): void
  +reFuel(v: Vehicle, newFuel: int): void
}

class Vehicle {
  -maxFuel: int
  -remainingFuel: int
  --
  +Vehicle(maxFuel: int)
  +getMaxFuel(): int
  +getRemainingFuel(): int
  +setRemainingFuel(remainingFuel: int): void
}

DrivingFunctions ..> Vehicle
FuelTank ..> Vehicle
@enduml